--- a/PortofolioKazhuro/Views/Home/_Education.cshtml
+++ b/PortofolioKazhuro/Views/Home/_Education.cshtml
@@ -2,12 +2,12 @@
 @if (Model.Count() > 0)
 {
 <div class="card mb-4 shadow-sm border-0 rounded-4">
-    <!-- Заголовок с кнопкой -->
 
-        <div class="card-header bg-light rounded-top-4 px-4 py-3 d-flex justify-content-between align-items-center">
-            <div class="d-flex align-items-center">
-                <i class="fas fa-graduation-cap me-2 text-primary"></i>
-                <h5 class="mb-0 fw-semibold">Образование</h5>
+        <div class="card shadow border-0 rounded-4 mb-4">
+            <div class="card-header bg-light rounded-top-4 d-flex justify-content-between align-items-center px-4 py-3">
+                <h5 class="mb-0 fw-bold d-flex align-items-center">
+                    <i class="fas fa-graduation-cap me-2 text-primary"></i>Образование
+                </h5>
             </div>
  
  
