--- a/PortofolioKazhuro/Views/Home/_CertificatesPartial.cshtml
+++ b/PortofolioKazhuro/Views/Home/_CertificatesPartial.cshtml
@@ -3,15 +3,10 @@
 {
 
 <div class="card shadow-sm border-0 rounded-4 mb-4">
-    <div class="card-header bg-light rounded-top-4 px-4 py-3 d-flex justify-content-between align-items-center">
-        <div class="d-flex align-items-center">
-            <i class="fas fa-certificate me-2 text-warning"></i>
-            <h5 class="mb-0 fw-semibold">Сертификаты</h5>
+        <div class="card-header bg-gradient bg-primary text-white rounded-top-4 py-4 px-4 d-flex align-items-center">
+            <i class="fas fa-code me-2"></i>
+            <h4 class="mb-0 fw-bold">Сертификаты</h4>
         </div>
-        
-    </div>
-
- 
 
     <div class="card-body px-4 pb-4">
       
