--- a/PortofolioKazhuro/Views/Shared/_Layout.cshtml
+++ b/PortofolioKazhuro/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/MyStyle.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PortofolioKazhuro.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 
@@ -21,7 +22,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - PortofolioKazhuro - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - PortofolioKazhuro
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
